# BasebandX

./: .gitignore  Dockerfile  README.md  config.h.in~  configure.ac
include/: archwriter.h  predictor.h  pulsarfolder.h
src/: Makefile.am
src/fold/: Makefile.am  archwriter.cpp  predictor.cpp  pulsarfold.cpp  pulsarfold_fil  pulsarfold_fil.cpp  pulsarfolder.cpp
src/formats/: psrfits.cpp
src/module/: Makefile.am
src/utils/: utils.cpp
