bin_PROGRAMS=pulsarfold pulsarfold_fil

AM_CPPFLAGS=-I$(top_srcdir)/include
LDADD=-lboost_program_options -lboost_log -lxmodule -lxformats -lxutils -lxcontainer -lymw16

pulsarfold_SOURCES=pulsarfold.cpp pulsarfolder.cpp predictor.cpp archwriter.cpp
pulsarfold_fil_SOURCES=pulsarfold_fil.cpp pulsarfolder.cpp predictor.cpp archwriter.cpp
